# pathway

./: README.md  docker-compose.yml  pyproject.toml
backend/generate_map/: __init__.py  base_map.py  route_on_map.py
conf/: main.py
docker/: Dockerfile
docker/backend/: Dockerfile
docker/bot/: Dockerfile
src/: database.py  main.py
src/generate_map/: __init__.py  route_on_map.py
src/migrations/: env.py
src/migrations/versions/: 399fb3f55214_initial_migration.py  70536f7068c9_initializing_migration.py  f466adaf40fb_add_models_user_image_and_coordinates.py
src/models/: __init__.py  coordinate.py  image.py  user.py
src/services/: __init__.py  coordinate.py  coordinate_services.py  user_services.py
src/source/: route_on_map.gpx
src/telegram_bot/: main_tg.py
src/telegram_bot/routers/: __init__.py  share_position.py  start.py
templates/: map.html
