[tool.poetry]
name = "pathway"
version = "0.1.0"
description = ""
authors = ["alexey <aleksei.bakeev@strana.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
aiogram = "^3.20.0.post0"
python-dotenv = "^1.1.0"
asyncpg = "^0.30.0"
mypy = "^1.15.0"
gpxpy = "^1.6.2"
folium = "^0.19.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
